<?xml version="1.0"?>
<package format="2">
  <name>vision_cone_detector</name>
  <version>0.0.0</version>
  <description>Simple dummy cone detector, that outputs "cone detections" at constant rate</description>
  <maintainer email="britss@student.ethz.ch">Sonja Brits</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For custom message import-->
  <depend>fsd_common_msgs</depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
