<?xml version="1.0"?>
<package format="2">
  <name>estimation_meta</name>
  <version>0.0.0</version>
  <description>Meta package for estimation</description>
  <maintainer email="sonjabritss@gmail.com">Sonja Brits</maintainer>
  <license>TODO</license>
  <author email="sonjabritss@gmail.com">Sonja Brits</author>


  <buildtool_depend>catkin</buildtool_depend>

  <!--TODO: Add the packages you want to build-->
  <depend>slam_slam</depend>
  <depend>velocity_estimator</depend>

  <export>
  </export>
</package>
